[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-resume"
version = "1.0.0"
description = "A web-based viewer for Claude chat history with resume functionality"
readme = "README.md"
authors = [
    {name = "Nik"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["claude", "chat", "history", "viewer", "ai", "conversation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nikbq/claude-resume"
Documentation = "https://github.com/nikbq/claude-resume#readme"
Repository = "https://github.com/nikbq/claude-resume.git"
Issues = "https://github.com/nikbq/claude-resume/issues"

[project.scripts]
claude-resume = "claude_resume.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_resume*"]

[tool.setuptools.package-data]
claude_resume = ["*.html", "static/*"]